--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   width: calc(50% - 1rem);
   margin: 1rem;
 
