--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
   justify-content: center;
   width: calc(100% - 2rem);
   margin: 1rem;
+}
 
-  border: 1px solid red;
+.preloader {
+  width: calc(50% - 1rem);
+}
+
+.details__preloader {
+  width: 100%;
+  text-align: center;
+  color: grey;
 }
