--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -1,11 +1,46 @@
-.details__article {
+* {
   box-sizing: border-box;
+}
+
+article {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   width: calc(50% - 1rem);
   margin: 1rem;
+}
 
-  border: 1px solid green;
+.preloader {
+  width: calc(50% - 1rem);
+  text-align: center;
+  color: grey;
+}
+
+.header {
+  margin: 0;
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+}
+
+.avatar {
+  width: 100%;
+}
+
+.details__list {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+}
+
+.details_list_item {
+  padding: 1rem;
+  text-align: center;
+}
+
+.header,
+.details_list_item {
+  border: 1px solid lightgrey;
 }
